--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
 streamlit
 yfinance
 pandas
-ta-lib
+datetime
 plotly
 requests
 smtplib
 email
 scikit-learn
 transformers
-torch
 textblob
-matplotlib
