--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-streamlit==1.32.0
 yfinance
 pandas
+streamlit
 plotly
 requests
-smtplib
-email
 scikit-learn
-textblob
 transformers
-torch
+ta-lib
